Name change in cargo.toml. Fixed toggle_by_pin example so it compiles with the changes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cupi_shift"
+name = "rppal_shift"
 version = "0.1.0"
 authors = ["Dan McDougall <daniel.mcdougall@liftoffsoftware.com>"]
 license = "MIT"
